--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <div class="property-grid">
         <!-- العنصر 1 -->
         <div class="property">
-            <img src="https://via.placeholder.com/300" alt="بيجامة كلاص" class="property-image">
+            <img src="https://i.imgur.com/ocwLJ0p.jpeg" alt="بيجامة كلاص" class="property-image">
             <div class="property-details">
                 <h3>بيجامة كلاص</h3>
                 <p class="description">بيجامة أنيقة ومريحة، مثالية للنوم أو الاسترخاء.</p>
@@ -327,7 +327,7 @@
 
         <!-- العنصر 2 -->
         <div class="property">
-            <img src="https://via.placeholder.com/300" alt="شابا صيفي" class="property-image">
+            <img src="https://i.imgur.com/VxkoFnE.jpeg" alt="شابا صيفي" class="property-image">
             <div class="property-details">
                 <h3>شابا صيفي</h3>
                 <p class="description">شابا خفيف ومريح، مثالي للصيف.</p>
@@ -339,7 +339,7 @@
 
         <!-- العنصر 3 -->
         <div class="property">
-            <img src="https://via.placeholder.com/300" alt="بيجامة شتوية" class="property-image">
+            <img src="https://i.imgur.com/b5tZzyZ.jpeg" alt="بيجامة شتوية" class="property-image">
             <div class="property-details">
                 <h3>بيجامة شتوية</h3>
                 <p class="description">بيجامة دافئة ومريحة لفصل الشتاء.</p>
