--- a/index.html
+++ b/index.html
@@ -348,6 +348,78 @@
                 <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
             </div>
         </div>
+
+        <div class="property-grid">
+        <!--4 -->
+        <div class="property">
+            <img src="https://i.imgur.com/dCZyINp.jpeg" alt="بيجامة كلاص" class="property-image">
+            <div class="property-details">
+                <h3>بيجامة كلاص</h3>
+                <p class="description">بيجامة أنيقة ومريحة، مثالية للنوم أو الاسترخاء.</p>
+                <p><strong>السعر:</strong> 1500 ج.م</p>
+                <p><strong>النوع:</strong> بيجامة</p>
+                <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
+            </div>
+        </div>
+<div class="property-grid">
+        <!--5 -->
+        <div class="property">
+            <img src="https://i.imgur.com/MplVO2W.jpeg" alt="بيجامة كلاص" class="property-image">
+            <div class="property-details">
+                <h3>بيجامة كلاص</h3>
+                <p class="description">بيجامة أنيقة ومريحة، مثالية للنوم أو الاسترخاء.</p>
+                <p><strong>السعر:</strong> 1500 ج.م</p>
+                <p><strong>النوع:</strong> بيجامة</p>
+                <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
+            </div>
+        </div>
+<div class="property-grid">
+        <!-- العنصر 6 -->
+        <div class="property">
+            <img src="https://i.imgur.com/DKb8I5r.jpeg" alt="بيجامة كلاص" class="property-image">
+            <div class="property-details">
+                <h3>بيجامة كلاص</h3>
+                <p class="description">بيجامة أنيقة ومريحة، مثالية للنوم أو الاسترخاء.</p>
+                <p><strong>السعر:</strong> 1500 ج.م</p>
+                <p><strong>النوع:</strong> بيجامة</p>
+                <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
+            </div>
+        </div>
+
+        <!-- العنصر 7 -->
+        <div class="property">
+            <img src="https://i.imgur.com/9oz3MOh.jpeg" alt="بيجامة كلاص" class="property-image">
+            <div class="property-details">
+                <h3>بيجامة كلاص</h3>
+                <p class="description">بيجامة أنيقة ومريحة، مثالية للنوم أو الاسترخاء.</p>
+                <p><strong>السعر:</strong> 1500 ج.م</p>
+                <p><strong>النوع:</strong> بيجامة</p>
+                <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
+            </div>
+        </div>
+        <!-- العنصر 8 -->
+        <div class="property">
+            <img src="https://i.imgur.com/DKb8I5r.jpeg" alt="بيجامة كلاص" class="property-image">
+            <div class="property-details">
+                <h3>بيجامة كلاص</h3>
+                <p class="description">بيجامة أنيقة ومريحة، مثالية للنوم أو الاسترخاء.</p>
+                <p><strong>السعر:</strong> 1500 ج.م</p>
+                <p><strong>النوع:</strong> بيجامة</p>
+                <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
+            </div>
+        </div>
+
+        <!-- 9 -->
+        <div class="property">
+            <img src="https://i.imgur.com/ocwLJ0p.jpeg" alt="بيجامة كلاص" class="property-image">
+            <div class="property-details">
+                <h3>بيجامة كلاص</h3>
+                <p class="description">بيجامة أنيقة ومريحة، مثالية للنوم أو الاسترخاء.</p>
+                <p><strong>السعر:</strong> 1500 ج.م</p>
+                <p><strong>النوع:</strong> بيجامة</p>
+                <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
+            </div>
+        </div>
     </div>
 
     <!-- روابط التنقل بين الصفحات -->
