--- a/index.html
+++ b/index.html
@@ -101,13 +101,30 @@
             border-radius: 10px;
             padding: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .property:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
         .property-image {
             width: 100%;
+            height: 200px;
+            object-fit: cover;
             border-radius: 10px;
         }
         .property-details {
-            margin-top: 10px;
+            margin-top: 15px;
+        }
+        .property-details h3 {
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+        }
+        .property-details p {
+            font-size: 0.9rem;
+            color: #666;
+            margin: 5px 0;
         }
         .btn-buy {
             display: inline-block;
@@ -117,6 +134,7 @@
             text-decoration: none;
             border-radius: 5px;
             margin-top: 10px;
+            transition: background-color 0.3s ease;
         }
         .btn-buy:hover {
             background-color: #ff3b2f;
@@ -132,6 +150,7 @@
             text-decoration: none;
             border-radius: 5px;
             margin: 0 5px;
+            transition: background-color 0.3s ease;
         }
         .pagination-btn:hover {
             background-color: #ff3b2f;
@@ -150,6 +169,7 @@
             max-width: 800px;
             margin: 20px auto;
             color: #fff;
+            text-align: center;
         }
         .promo-text h1 {
             font-size: 2.5rem;
@@ -235,6 +255,9 @@
             }
             .promo-text p {
                 font-size: 1rem;
+            }
+            .property-grid {
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             }
         }
     </style>
@@ -349,8 +372,7 @@
             </div>
         </div>
 
-        <div class="property-grid">
-        <!--4 -->
+        <!-- العنصر 4 -->
         <div class="property">
             <img src="https://i.imgur.com/dCZyINp.jpeg" alt="بيجامة كلاص" class="property-image">
             <div class="property-details">
@@ -361,8 +383,8 @@
                 <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
             </div>
         </div>
-<div class="property-grid">
-        <!--5 -->
+
+        <!-- العنصر 5 -->
         <div class="property">
             <img src="https://i.imgur.com/MplVO2W.jpeg" alt="بيجامة كلاص" class="property-image">
             <div class="property-details">
@@ -373,7 +395,7 @@
                 <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
             </div>
         </div>
-<div class="property-grid">
+
         <!-- العنصر 6 -->
         <div class="property">
             <img src="https://i.imgur.com/DKb8I5r.jpeg" alt="بيجامة كلاص" class="property-image">
@@ -397,6 +419,7 @@
                 <a href="https://forms.gle/gsaTWoAyXf4rWSjMA" class="btn-buy" target="_blank">شراء</a>
             </div>
         </div>
+
         <!-- العنصر 8 -->
         <div class="property">
             <img src="https://i.imgur.com/DKb8I5r.jpeg" alt="بيجامة كلاص" class="property-image">
@@ -409,7 +432,7 @@
             </div>
         </div>
 
-        <!-- 9 -->
+        <!-- العنصر 9 -->
         <div class="property">
             <img src="https://i.imgur.com/ocwLJ0p.jpeg" alt="بيجامة كلاص" class="property-image">
             <div class="property-details">
