--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
         <span class="current-page">1</span>
         <a href="#" class="pagination-btn">الصفحة التالية &raquo;</a>
     </div>
+
 </section>
 
 <footer>
@@ -465,6 +466,25 @@
         </ul>
     </div>
 </footer>
+    <script>
+    // تعطيل النقر بزر الماوس الأيمن
+    document.addEventListener('contextmenu', function(e) {
+        e.preventDefault();
+    });
+
+    // تعطيل التحديد
+    document.onselectstart = function () {
+        return false;
+    };
+
+    // تعطيل اختصارات لوحة المفاتيح مثل Ctrl+C
+    document.addEventListener('keydown', function(e) {
+        if (e.ctrlKey && (e.key === 'c' || e.key === 'C')) {
+            e.preventDefault();
+        }
+    });
+
+</script>
 
 </body>
 </html>
